src/test/ui/const-len-underflow-separate-spans.stderr
error[E0080]: constant evaluation error
  --> $DIR/const-len-underflow-separate-spans.rs:17:20
   |
17 | const LEN: usize = ONE - TWO;
   |                    ^^^^^^^^^ attempt to subtract with overflow

error[E0080]: constant evaluation error
  --> $DIR/const-len-underflow-separate-spans.rs:21:17
   |
21 |     let a: [i8; LEN] = unimplemented!();
   |                 ^^^ attempt to subtract with overflow

error: aborting due to 2 previous errors

